--- a/imperio/index.html
+++ b/imperio/index.html
@@ -138,8 +138,8 @@
 			<div class="cartBody">
 				<div class="cartList"><div class="cartListnone">Você ainda não tem nenhum item em seu carrinho</div><img src="images/icons/saderror.png" alt="nonecart"></div>
 				<div class="cartTotal">
-					<div class="cartResume"><strong class="smallpricetext">Você possui 0 item(ns) em seu carrinho.</strong></div>
-					<a class="cartSendButton nselm" href="https://api.whatsapp.com/send/?phone=19997597681&text=🦒Olá, Império Francisca! Gostaria de entrar em contato para tirar uma dúvida. 💖" target="_blank">Enviar no Whatsapp</a>
+					<div class="cartResume"><strong class="smallpricetext">Você possui <strong>0</strong> item(ns) em seu carrinho.</strong></div>
+					<a class="cartSendButton nselm" href="https://api.whatsapp.com/send/?phone=19997597681&text=🦒Olá, Império Francisca! Gostaria de entrar em contato para tirar uma dúvida. 💖" target="_blank">Enviar ao Whatsapp</a>
 				</div>
 			</div>
 		</div>
