Finalizando funcionalidade das instruções

--- a/imperio/Institucional/troca.html
+++ b/imperio/Institucional/troca.html
@@ -83,31 +83,18 @@
 		</div>
 		<div class="footerblock">
 			<h1>Institucional</h1>
-			<ul>
-				<li><a href="#">Sobre o Império Francisca</a></li>
-				<li><a href="#">Termos e condições</a></li>
-				<li><a href="#">Nossa história</a></li>
-				<li><a href="#">Trocas e Devoluções</a></li>
+			<ul><!-- ITENS INTITUCIONAIS -->
+				<li class="footeritem"><a href="Institucional/sobre.html">Sobre o Império Francisca</a></li>
+				<li class="footeritem"><a href="Institucional/termos.html">Termos e condições</a></li>
+				<li class="footeritem"><a href="Institucional/historia.html">Nossa história</a></li>
+				<li class="footeritem"><a href="Institucional/troca.html">Trocas e Devoluções</a></li>
 			</ul>
 		</div>
 		<div class="shadowBox" onclick="clickthrow(0)" style="display: none;"></div>
-		<div class="left_menuBar" style="display: none;">
-			<div id="menuHeader">
-				<h1>Navegue por categoria</h1>
-				<span onclick="clickthrow(0)"><img src="images/icons/betterclose.png" alt="closeMenu"></span>
-			</div>
-			<ul>
-				<li  class="menuItens">• Mostrar todos</li>
-				<li class="menuTitles"><img src="images/menuicons/roupas.png" alt="roupas">Roupas</li>
-				<li class="menuItens">• Camisas</li>
-				<li class="menuItens">• Calças</li>
-				<li class="menuItens">• Vestidos</li>
-				<li class="menuTitles"><img src="images/menuicons/joias.png" alt="">Acessórios</li>
-				<li class="menuItens">• Bolsas</li>
-				<li class="menuItens">• Cintos</li>
-				<li class="menuItens">• Porta-Joias</li>
-			</ul>
-		</div>
+	</footer>
+	<div id="creditsFooter">
+		<h3>Quer um site igual a este? <a href="https://github.com/AndreFilipeD" target="_blank">Clique aqui</a> e saiba mais.</h3>
+	</div>
 	<script src="../script/script.js">
 	</script>
 </body>
