--- a/imperio/index.html
+++ b/imperio/index.html
@@ -38,9 +38,9 @@
 		</div>
 		<!-- BOX SECOND IMAGE -->
 		<div class="pshowSecimages"> 
-			<img class="SecimgA" alt="blusaExemplo">
-			<img class="SecimgB" alt="blusaExemplo">
-			<img class="SecimgC" alt="blusaExemplo">
+			<img class="SecimgA" alt="blusaExemplo" onclick="changePicture(1)">
+			<img class="SecimgB" alt="blusaExemplo" onclick="changePicture(2)">
+			<img class="SecimgC" alt="blusaExemplo" onclick="changePicture(3)">
 		</div>
 		<!-- BOX CARTSHOP -->
 		<div class="pshowCartadd">
