Muitas correções e organização de arquivos

--- a/imperio/Institucional/termos.html
+++ b/imperio/Institucional/termos.html
@@ -16,13 +16,11 @@
 			<a href="../index.html"><img src="../images/icons/return.png" alt="Return"></a>
 		</div>
 		<div id="logo">
-			<img id="logoImage" src="../images/imperiologo.svg" alt="logoimperio">
+			<img id="logoImage" src="../images/headerlogo/imperiologo.svg" alt="logoimperio">
 			<h1 id="mainTitle">IMPÉRIO</h1>
 			<h1 id="secTitle">Francisca</h1>
 		</div>
 		<div id="rightHeader">
-			<a href="../index.html"><img src="../images/icons/heart_plus.png" alt="Heart Plus"></a>
-			<a href="../index.html"><img src="../images/icons/shop_bag.png" alt="Shopping Bag"></a>
 		</div>
 	</header>
 	<main>
@@ -63,10 +61,10 @@
 		<div class="footerblock">
 			<h1>Institucional</h1>
 			<ul><!-- ITENS INTITUCIONAIS -->
-				<li class="footeritem"><a href="Institucional/sobre.html">Sobre o Império Francisca</a></li>
-				<li class="footeritem"><a href="Institucional/termos.html">Termos e condições</a></li>
-				<li class="footeritem"><a href="Institucional/historia.html">Nossa história</a></li>
-				<li class="footeritem"><a href="Institucional/troca.html">Trocas e Devoluções</a></li>
+				<li class="footeritem"><a href="sobre.html">Sobre o Império Francisca</a></li>
+				<li class="footeritem"><a href="termos.html">Termos e condições</a></li>
+				<li class="footeritem"><a href="historia.html">Nossa história</a></li>
+				<li class="footeritem"><a href="troca.html">Trocas e Devoluções</a></li>
 			</ul>
 		</div>
 		<div class="shadowBox" onclick="clickthrow(0)" style="display: none;"></div>
