--- a/imperio/index.html
+++ b/imperio/index.html
@@ -5,7 +5,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Império Francisca</title>
-	<link rel="shortcut icon" href="images/lb.svg" type="image/x-icon">
+	<link rel="shortcut icon" href="images/favicon_crown.svg" type="image/x-icon">
 	<link rel="stylesheet" href="estilos/style.css">
 	<link rel="stylesheet" href="estilos/media-query.css">
 </head>
@@ -16,7 +16,7 @@
 			<img src="images/icons/menu.png" alt="Menu" onclick="clickthrow(1)">
 		</div>
 		<div id="logo" class="nselm" onclick="clickthrow(0), showProduct(-1)"><!-- LOGO CENTRAL RENDERIZADO EM CSS -->
-			<img id="logoImage" src="images/imperiologo.svg" alt="logo imperio francisca">
+			<img id="logoImage" src="images/headerlogo/imperiologo.svg" alt="logo imperio francisca">
 			<h1 id="mainTitle">IMPÉRIO</h1>
 			<h1 id="secTitle">Francisca</h1>
 		</div>
@@ -94,11 +94,11 @@
 		<div class="footerblock">
 			<h1>Institucional</h1>
 			<ul>
-				<!-- ITENS INTITUCIONAIS -->
+				<!-- ITENS INTITUCIONAIS --> 
 				<li class="footeritem"><a href="Institucional/sobre.html">Sobre o Império Francisca</a></li>
 				<li class="footeritem"><a href="Institucional/termos.html">Termos e condições</a></li>
 				<li class="footeritem"><a href="Institucional/historia.html">Nossa história</a></li>
-				<li class="footeritem"><a href="Institucional/troca.html">Trocas e Devoluções</a></li>
+				<li class="footeritem"><a href="Institucional/troca.html">Trocas e Devoluções</a></li> 
 			</ul>
 		</div>
 	</footer>
@@ -155,8 +155,7 @@
 			</div>
 		</div>	
 	<!-- SCRIPT GERAL DA PAGINA -->
-	<script src="script/script.js">
-	</script>
+	<script src="script/script.js"></script>
 	<script src="script/produtos.js"></script>
 </body>
 </html>
