Reiniciando e avançando no projeto PaintWeb

--- a/paintweb/index.html
+++ b/paintweb/index.html
@@ -7,16 +7,22 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
+<header>
+    <p id="valueTester">0</p>
+    <p id="mouseX">0</p>
+    <p id="mouseY">0</p>
 
-    </header>
-    <main>
-        <aside>
-            <div class="lateralObj">Caneta</div>
-        </aside>
-        <canvas id="canvasArea" width="400" height="500" onmousedown="drawn()"></canvas>
-    </main>
-    <p id="txtis">placeholder</p>
-    <script src="script.js"></script>
+    <p id="mouseActIs">0</p>
+</header>
+<main>
+    <canvas id="drawnArea" width="450" height="450" onmouseenter="trigger('on')" onmouseout="trigger('off')">Não foi possivel carregar o canvas.</canvas>
+</main>
+<footer>
+    <h1>Siga:</h1><br>
+    <a href="#">about</a><br>
+    <a href="#">info</a><br>
+    <a href="#">data</a><br>
+</footer>
+<script src="script.js"></script>
 </body>
 </html>
