Ultima atualização do dia

--- a/html-css-javascript/callback/index.html
+++ b/html-css-javascript/callback/index.html
@@ -11,6 +11,9 @@
     <main id="space">
         Espaço vazio
     </main>
+    <footer>
+        
+    </footer>
 <script src="script.js"></script>
 </body>
 </html>
