--- a/react-cdn/index.html
+++ b/react-cdn/index.html
@@ -14,7 +14,7 @@
     <script type="text/babel">
     
       function MyApp() {
-        return <h1>Isso é um aplicativo</h1>;
+        return <h1>Hello, World!</h1>;
       }
 
       const container = document.getElementById('root');
